Some Errors Fixed

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
         <div id="mainWrapper">
             <div id="gitText">
                 <p>Git is a <span class="blueText">free and open source</span> distributed version control system designed to handle everything from small to very large projects with speed and efficiency.</p>
-                <p>Git is <span class="blueText">easy to learn</span> and has a <spanclass="blueText">tiny footprint with lightning fast performance</span>. It outclasses SCM tools like Subversion, CVS, Perforce, and ClearCase with features like <span class="blueText">cheap local branching</span>, convenient <span class="blueText">staging areas</span>, and <span class="blueText">multiple workflows</span>. </p>
+                <p>Git is <span class="blueText">easy to learn</span> and has a <span class="blueText">tiny footprint with lightning fast performance</span>. It outclasses SCM tools like Subversion, CVS, Perforce, and ClearCase with features like <span class="blueText">cheap local branching</span>, convenient <span class="blueText">staging areas</span>, and <span class="blueText">multiple workflows</span>.</p>
             </div>
             <div id="gitImage">
                 <img src="images/branching-illustration.png" width="390" height="250" alt="Branching illustration">
             </div>
         </div>
+    </div>
 </body>
 </html>
